--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#F08A5D</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#F08A5D</color>
+    <color name="colorRed">#B83B5E</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorTransparentBlack">#80000000</color>
+    <color name="colorGreenBackground">#F08A5D</color>
 </resources>
