--- a/app/src/main/res/layout/categories_cell.xml
+++ b/app/src/main/res/layout/categories_cell.xml
@@ -5,7 +5,7 @@
 
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/categories_name"
         android:textSize="18sp"
         android:textColor="@color/colorPrimaryDark"
         android:layout_width="match_parent"
