--- a/app/src/main/res/layout/categories_fragment.xml
+++ b/app/src/main/res/layout/categories_fragment.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -11,5 +10,4 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
 
-
-</RelativeLayout>
+</LinearLayout>
