--- a/app/src/main/res/layout/detailed_recipe_fragment.xml
+++ b/app/src/main/res/layout/detailed_recipe_fragment.xml
@@ -5,92 +5,91 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/detailed_recipe_image"
             android:layout_width="1000dp"
             android:layout_height="300dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop" />
 
         <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Ingredients required"
-        android:layout_below="@id/detailed_recipe_image"
-        android:textSize="25sp"
-        android:layout_margin="8dp"
-        android:id="@+id/ingredients_required"
-        android:textColor="@android:color/black"/>
+            android:id="@+id/ingredients_required"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/detailed_recipe_image"
+            android:layout_margin="8dp"
+            android:text="Ingredients required"
+            android:textColor="@android:color/black"
+            android:textSize="25sp" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_below="@id/ingredients_required"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:id="@+id/detailed_recipe_detail"/>
+        <TextView
+            android:id="@+id/detailed_recipe_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ingredients_required"
+            android:layout_margin="8dp" />
 
-    <TextView
-        android:id="@+id/howcook"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="How to cook:"
-        android:layout_below="@id/detailed_recipe_detail"
-        android:textSize="23sp"
-        android:layout_margin="8dp"
-        android:textColor="@android:color/black"/>
+        <TextView
+            android:id="@+id/howcook"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/detailed_recipe_detail"
+            android:layout_margin="8dp"
+            android:text="How to cook:"
+            android:textColor="@android:color/black"
+            android:textSize="23sp" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/how_to_cook"
-        android:layout_below="@+id/howcook"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"/>
+        <TextView
+            android:id="@+id/how_to_cook"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/howcook"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp" />
 
-    <TextView
-        android:text="Number of recipe"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/numb_of_recipe"
-        android:layout_below="@+id/how_to_cook"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
-        android:layout_margin="10dp" />
+        <TextView
+            android:id="@+id/numb_of_recipe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/how_to_cook"
+            android:layout_margin="10dp"
+            android:text="Number of recipe"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
         <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            app:fabSize="mini"
-            app:srcCompat="@drawable/ic_minus_one_black"
             android:id="@+id/floatingActionButton3"
-            android:layout_marginEnd="24dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignEnd="@+id/numb_of_recipe"
-            android:layout_margin="13dp"
-            app:elevation="0dp"
-            android:paddingStart="2dp" />
-
-        <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            app:fabSize="mini"
-            app:srcCompat="@drawable/ic_plus_one_black"
-            android:id="@+id/floatingActionButton2"
+            android:layout_alignEnd="@+id/numb_of_recipe"
             android:layout_alignParentBottom="true"
-            android:layout_toStartOf="@+id/floatingActionButton3"
-            android:layout_marginEnd="24dp"
             android:layout_margin="13dp"
+            android:layout_marginEnd="24dp"
+            android:clickable="true"
+            android:paddingStart="2dp"
             app:elevation="0dp"
-            android:paddingStart="2dp" />
+            app:fabSize="mini"
+            app:srcCompat="@drawable/ic_minus_one_black" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/floatingActionButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="13dp"
+            android:layout_marginEnd="24dp"
+            android:layout_toStartOf="@+id/floatingActionButton3"
+            android:clickable="true"
+            android:paddingStart="2dp"
+            app:elevation="0dp"
+            app:fabSize="mini"
+            app:srcCompat="@drawable/ic_plus_one_black" />
 
     </RelativeLayout>
 </ScrollView>
