--- a/app/src/main/res/layout/grid_view_cell.xml
+++ b/app/src/main/res/layout/grid_view_cell.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/grid_image"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
         android:layout_gravity="center"
-        android:layout_margin="8dp"/>
+        android:layout_margin="8dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop" />
 
     <TextView
+        android:id="@+id/grid_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/grid_name"
         android:layout_alignBottom="@id/grid_image"
         android:background="@color/colorTransparentBlack" />
 
     <TextView
+        android:id="@+id/grid_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/grid_detail"
-        android:layout_margin="8dp"/>
+        android:layout_margin="8dp" />
 
 </RelativeLayout>
