--- a/app/src/main/res/layout/tab_layout_fragment.xml
+++ b/app/src/main/res/layout/tab_layout_fragment.xml
@@ -8,13 +8,12 @@
         android:id="@+id/screen"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1" />
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite">
-    </android.support.design.widget.TabLayout>
+        android:background="@color/colorWhite"></android.support.design.widget.TabLayout>
 
 </LinearLayout>
