--- a/app/src/main/res/layout/detailed_recipe_fragment.xml
+++ b/app/src/main/res/layout/detailed_recipe_fragment.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/detailed_recipe_image"
@@ -26,7 +25,7 @@
             android:layout_margin="8dp"
             android:text="Ingredients required"
             android:textColor="@android:color/black"
-            android:textSize="25sp" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/detailed_recipe_detail"
@@ -43,7 +42,7 @@
             android:layout_margin="8dp"
             android:text="How to cook:"
             android:textColor="@android:color/black"
-            android:textSize="23sp" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/how_to_cook"
@@ -58,38 +57,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/how_to_cook"
-            android:layout_margin="10dp"
+            android:layout_margin="8dp"
             android:text="Chosen recipes"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floatingActionButton3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/numb_of_recipe"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="13dp"
-            android:layout_marginEnd="24dp"
-            android:clickable="true"
-            android:paddingStart="2dp"
-            app:elevation="0dp"
-            app:fabSize="mini"
-            app:srcCompat="@drawable/ic_plus_one_black" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floatingActionButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignEnd="@+id/how_to_cook"
             android:layout_alignParentBottom="true"
-            android:layout_margin="13dp"
-            android:layout_marginEnd="24dp"
-            android:layout_toStartOf="@+id/floatingActionButton3"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:backgroundTint="@color/colorAccent"
             android:clickable="true"
-            android:paddingStart="2dp"
-            app:elevation="0dp"
-            app:fabSize="mini"
-            app:srcCompat="@drawable/ic_minus_one_black" />
+            android:textSize="14sp"
+            tools:text="+" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignBaseline="@+id/numb_of_recipe"
+            android:layout_alignBottom="@+id/numb_of_recipe"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_toStartOf="@+id/button1"
+            android:backgroundTint="@color/colorAccent"
+            android:clickable="true"
+            android:textSize="18sp"
+            tools:text="-" />
 
     </RelativeLayout>
 </ScrollView>
