corrected due to comment

--- a/app/src/main/res/layout/detailed_recipe_fragment.xml
+++ b/app/src/main/res/layout/detailed_recipe_fragment.xml
@@ -10,8 +10,8 @@
 
         <ImageView
             android:id="@+id/detailed_recipe_image"
-            android:layout_width="1000dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:adjustViewBounds="true"
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/detailed_recipe_image"
             android:layout_margin="8dp"
-            android:text="Ingredients required"
+            android:text="@string/ingredients_required"
             android:textColor="@android:color/black"
             android:textSize="24sp" />
 
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/detailed_recipe_detail"
             android:layout_margin="8dp"
-            android:text="How to cook:"
+            android:text="@string/how_to_cook"
             android:textColor="@android:color/black"
             android:textSize="24sp" />
 
@@ -58,13 +58,12 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/how_to_cook"
             android:layout_margin="8dp"
-            android:text="Chosen recipes"
+            android:text="@string/chosen_recipes"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
-
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/plus_button"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignEnd="@+id/how_to_cook"
@@ -74,21 +73,23 @@
             android:backgroundTint="@color/colorAccent"
             android:clickable="true"
             android:textSize="14sp"
+            android:text="@string/plus_button"
             tools:text="+" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/minus_button"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_alignBaseline="@+id/numb_of_recipe"
-            android:layout_alignBottom="@+id/numb_of_recipe"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_toStartOf="@+id/button1"
             android:backgroundTint="@color/colorAccent"
             android:clickable="true"
-            android:textSize="18sp"
-            tools:text="-" />
+            android:textSize="14sp"
+            tools:text="-"
+            android:text="@string/minus_button"
+            android:layout_alignParentBottom="true"
+            android:layout_toStartOf="@+id/plus_button"
+            android:layout_marginEnd="19dp" />
 
     </RelativeLayout>
 </ScrollView>
