--- a/app/src/main/res/layout/tab_layout_fragment.xml
+++ b/app/src/main/res/layout/tab_layout_fragment.xml
@@ -14,6 +14,8 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"></android.support.design.widget.TabLayout>
+        android:background="@color/colorWhite">
+
+    </android.support.design.widget.TabLayout>
 
 </LinearLayout>
