--- a/app/src/main/res/layout/categories_cell.xml
+++ b/app/src/main/res/layout/categories_cell.xml
@@ -6,7 +6,8 @@
 
     <TextView
         android:id="@+id/categories_name"
-        android:textSize="18sp"
+        android:textSize="32sp"
+        android:layout_margin="8dp"
         android:textColor="@color/colorPrimaryDark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
