--- a/app/src/main/res/layout/detailed_recipe_fragment.xml
+++ b/app/src/main/res/layout/detailed_recipe_fragment.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:visibility="visible">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -72,24 +74,34 @@
             android:layout_marginRight="16dp"
             android:backgroundTint="@color/colorAccent"
             android:clickable="true"
-            android:textSize="14sp"
             android:text="@string/plus_button"
+            android:textSize="14sp"
             tools:text="+" />
 
         <Button
             android:id="@+id/minus_button"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="19dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:layout_toStartOf="@+id/plus_button"
             android:backgroundTint="@color/colorAccent"
             android:clickable="true"
-            android:textSize="14sp"
-            tools:text="-"
             android:text="@string/minus_button"
-            android:layout_alignParentBottom="true"
-            android:layout_toStartOf="@+id/plus_button"
-            android:layout_marginEnd="19dp" />
+            android:textSize="14sp"
+            tools:text="-" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/plus_button"
+            android:src="@drawable/ic_like"
+            app:layout_anchorGravity="bottom|right|end"
+            android:layout_toEndOf="@+id/minus_button"
+            android:layout_alignBottom="@+id/detailed_recipe_detail" />
 
     </RelativeLayout>
 </ScrollView>
