--- a/app/src/main/res/layout/grid_view_cell.xml
+++ b/app/src/main/res/layout/grid_view_cell.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="center"
         android:layout_margin="8dp"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop" />
+        android:scaleType="fitCenter" />
 
     <TextView
         android:id="@+id/grid_name"
