corrected design of gridview

--- a/app/src/main/res/layout/grid_view_cell.xml
+++ b/app/src/main/res/layout/grid_view_cell.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/colorWhite">
 
     <ImageView
         android:id="@+id/grid_image"
@@ -14,15 +15,21 @@
 
     <TextView
         android:id="@+id/grid_name"
+        android:layout_alignLeft="@+id/grid_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignBottom="@id/grid_image"
-        android:background="@color/colorTransparentBlack" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/grid_image"
+        android:background="@color/colorWhite"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/grid_detail"
+        android:layout_alignLeft="@+id/grid_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp" />
+        android:layout_below="@+id/grid_name"
+        android:textColor="@color/colorPrimaryDark"
+        android:background="@color/colorWhite" />
 
 </RelativeLayout>
