if text is too long, it`s cropped now

--- a/app/src/main/res/layout/grid_view_cell.xml
+++ b/app/src/main/res/layout/grid_view_cell.xml
@@ -20,6 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/grid_image"
         android:background="@color/colorWhite"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="16sp" />
 
