--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorTransparentBlack">#80000000</color>
     <color name="colorGreenBackground">#F08A5D</color>
+    <color name="colorSomeWhiteBackground">#fffaf6</color>
 </resources>
