--- a/app/src/main/res/layout/categories_cell.xml
+++ b/app/src/main/res/layout/categories_cell.xml
@@ -2,12 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <ImageButton
-        android:id="@+id/arrowback"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/categories_name"
@@ -16,5 +11,4 @@
         android:padding="8dp"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
-
 </LinearLayout>
