--- a/app/src/main/res/layout/categories_cell.xml
+++ b/app/src/main/res/layout/categories_cell.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="48dp"
+    android:layout_marginBottom="1dp"
+    android:background="@color/colorWhite"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/categories_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="16dp"
+        android:layout_weight="4"
         android:padding="8dp"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:layout_weight="1"
+        android:padding="8dp"
+        android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
 </LinearLayout>
