--- a/app/src/main/res/layout/grid_view_fragment.xml
+++ b/app/src/main/res/layout/grid_view_fragment.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:iconifiedByDefault="false"
+        android:textColor="@color/colorPrimaryDark"
         android:queryHint="Search Recipe" />
 
     <GridView
