Forgot 2 xml files

--- a/app/src/main/res/layout/grid_view_cell.xml
+++ b/app/src/main/res/layout/grid_view_cell.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+
+    android:background="@color/colorSomeWhiteBackground">
 
     <ImageView
         android:id="@+id/grid_image"
@@ -10,19 +12,28 @@
         android:layout_gravity="center"
         android:layout_margin="8dp"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop" />
+        android:scaleType="fitCenter" />
 
     <TextView
         android:id="@+id/grid_name"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignBottom="@id/grid_image"
-        android:background="@color/colorTransparentBlack" />
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/grid_image"
+        android:layout_below="@+id/grid_image"
+        android:background="@color/colorSomeWhiteBackground"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/grid_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp" />
+        android:layout_alignLeft="@+id/grid_image"
+        android:layout_below="@+id/grid_name"
+        android:layout_marginBottom="8dp"
+        android:background="@color/colorSomeWhiteBackground"
+        android:textColor="@color/colorPrimaryDark" />
 
 </RelativeLayout>
