--- a/app/src/main/res/layout/grid_view_cell.xml
+++ b/app/src/main/res/layout/grid_view_cell.xml
@@ -16,9 +16,9 @@
 
     <TextView
         android:id="@+id/grid_name"
-        android:layout_alignLeft="@+id/grid_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/grid_image"
         android:layout_below="@+id/grid_image"
         android:background="@color/colorWhite"
         android:ellipsize="end"
@@ -26,14 +26,36 @@
         android:textColor="@color/colorPrimaryDark"
         android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/grid_detail"
-        android:layout_alignLeft="@+id/grid_image"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/grid_name"
-        android:textColor="@color/colorPrimaryDark"
-        android:layout_marginBottom="8dp"
-        android:background="@color/colorWhite" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/grid_name">
+
+        <ImageView
+            android:id="@+id/watch"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/grid_name"
+            android:padding="8dp"
+            android:src="@drawable/ic_watch_later_black_24dp" />
+
+        <TextView
+            android:id="@+id/grid_time_of_cooking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_alignLeft="@+id/watch"
+            android:layout_below="@+id/grid_name"
+            android:padding="8dp" />
+
+        <TextView
+            android:id="@+id/grid_difficulty_of_cooking"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="16sp"
+            android:layout_alignStart="@+id/grid_time_of_cooking"
+            android:layout_below="@+id/grid_name"
+            android:padding="8dp" />
+    </LinearLayout>
 
 </RelativeLayout>
