--- a/app/src/main/res/layout/grid_view_cell.xml
+++ b/app/src/main/res/layout/grid_view_cell.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-
+    android:elevation="8dp"
     android:background="@color/colorWhite">
 
     <ImageView
