--- a/app/src/main/res/layout/tab_layout_fragment.xml
+++ b/app/src/main/res/layout/tab_layout_fragment.xml
@@ -12,6 +12,7 @@
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
+        android:elevation="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorWhite">
