--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="colorTransparentBlack">#57000000</color>
     <color name="colorGreenBackground">#00bfa5</color>
     <color name="colorSomeWhiteBackground">#c9f7ef</color>
-    <color name="colorGrey">#cbcbcb</color>
+    <color name="colorGrey">#d9d9d9</color>
 </resources>
