--- a/app/src/main/res/layout/categories_cell.xml
+++ b/app/src/main/res/layout/categories_cell.xml
@@ -24,6 +24,7 @@
         android:layout_marginRight="16dp"
         android:layout_weight="1"
         android:focusable="false"
+        android:clickable="true"
         android:padding="8dp"
         android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
 </LinearLayout>
