--- a/app/src/main/res/layout/grid_view_cell.xml
+++ b/app/src/main/res/layout/grid_view_cell.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:elevation="8dp"
-    android:background="@color/colorWhite">
+    android:background="@color/colorWhite"
+    android:elevation="8dp">
 
     <ImageView
         android:id="@+id/grid_image"
@@ -33,35 +33,42 @@
 
         <ImageView
             android:id="@+id/watch"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_below="@+id/grid_name"
-            android:padding="8dp"
+            android:paddingBottom="4dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="4dp"
+            android:paddingTop="8dp"
             android:src="@drawable/ic_watch_later_black_24dp" />
 
         <TextView
             android:id="@+id/grid_time_of_cooking"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
             android:layout_alignLeft="@+id/watch"
             android:layout_below="@+id/grid_name"
-            android:paddingTop="8dp"/>
+            android:paddingTop="8dp"
+            android:paddingRight="16dp"
+            android:textSize="18sp" />
 
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:padding="8dp"
-            android:src="@drawable/chef"/>
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:paddingBottom="4dp"
+            android:paddingLeft="4dp"
+            android:paddingRight="8dp"
+            android:paddingTop="8dp"
+            android:src="@drawable/chef" />
 
         <TextView
             android:id="@+id/grid_difficulty_of_cooking"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="20sp"
             android:layout_alignStart="@+id/grid_time_of_cooking"
             android:layout_below="@+id/grid_name"
-            android:paddingTop="8dp"/>
+            android:paddingTop="8dp"
+            android:textSize="18sp" />
     </LinearLayout>
 
 </RelativeLayout>
