Favorite recipes fragment now works properly

--- a/app/src/main/res/layout/favorite_recipes_fragment.xml
+++ b/app/src/main/res/layout/favorite_recipes_fragment.xml
@@ -17,6 +17,7 @@
         android:id="@+id/favorite_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/searchRecipe"
         android:gravity="center"
         android:horizontalSpacing="8dp"
         android:numColumns="2"
