--- a/app/src/main/res/layout/detailed_recipe_fragment.xml
+++ b/app/src/main/res/layout/detailed_recipe_fragment.xml
@@ -112,7 +112,7 @@
             tools:text="-" />
 
         <TextView
-            android:id="@+id/couterValue"
+            android:id="@+id/portion_quantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/numb_of_recipe"
@@ -124,7 +124,7 @@
             android:textAlignment="center" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/favorite_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/plus_button"
