Recipe screen now has normal list of ingredients, but design fixes needed

--- a/app/src/main/res/layout/detailed_recipe_fragment.xml
+++ b/app/src/main/res/layout/detailed_recipe_fragment.xml
@@ -65,7 +65,7 @@
             android:textColor="@color/colorBlack"
             android:textSize="16sp" />
 
-        <TextView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/detailed_recipe_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
