--- a/app/src/main/res/layout/detailed_recipe_fragment.xml
+++ b/app/src/main/res/layout/detailed_recipe_fragment.xml
@@ -1,127 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorForBackground">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorForBackground">
+        android:layout_height="250dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <ImageView
-            android:id="@+id/detailed_recipe_image"
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax" />
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin" />
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ffe5e5e5"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop" />
+            android:background="@color/colorForBackground">
 
-        <TextView
-            android:id="@+id/numb_of_recipe"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/howcook"
-            android:layout_below="@+id/detailed_recipe_image"
-            android:layout_marginTop="16dp"
-            android:paddingLeft="16dp"
-            android:text="@string/chosen_recipes"
-            android:textColor="@color/colorBlack"
-            android:textSize="16sp" />
+            <ImageView
+                android:id="@+id/detailed_recipe_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop" />
 
-        <TextView
-            android:id="@+id/howcook"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/numb_of_recipe"
-            android:layout_margin="4dp"
-            android:paddingLeft="16dp"
-            android:text="@string/how_to_cook"
-            android:textColor="@color/colorBlack"
-            android:textSize="16sp" />
+            <TextView
+                android:id="@+id/numb_of_recipe"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/howcook"
+                android:layout_below="@+id/detailed_recipe_image"
+                android:layout_marginTop="16dp"
+                android:paddingLeft="16dp"
+                android:text="@string/chosen_recipes"
+                android:textColor="@color/colorBlack"
+                android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/how_to_cook"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/howcook"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="4dp"
-            android:paddingLeft="16dp"
-            android:textColor="@color/colorForText"
-            android:textSize="14sp" />
+            <TextView
+                android:id="@+id/howcook"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/numb_of_recipe"
+                android:layout_margin="4dp"
+                android:paddingLeft="16dp"
+                android:text="@string/how_to_cook"
+                android:textColor="@color/colorBlack"
+                android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/ingredients_required"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/how_to_cook"
-            android:layout_margin="4dp"
-            android:paddingLeft="16dp"
-            android:text="@string/ingredients_required"
-            android:textColor="@color/colorBlack"
-            android:textSize="16sp" />
+            <TextView
+                android:id="@+id/how_to_cook"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/howcook"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="4dp"
+                android:paddingLeft="16dp"
+                android:textColor="@color/colorForText"
+                android:textSize="14sp" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/detailed_recipe_detail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ingredients_required"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="4dp"
-            android:layout_marginEnd="8dp"
-            android:paddingLeft="16dp"
-            android:textColor="@color/colorForText"
-            android:textSize="14sp" />
+            <TextView
+                android:id="@+id/ingredients_required"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/how_to_cook"
+                android:layout_margin="4dp"
+                android:paddingLeft="16dp"
+                android:text="@string/ingredients_required"
+                android:textColor="@color/colorBlack"
+                android:textSize="16sp" />
 
-        <Button
-            android:id="@+id/plus_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignBaseline="@+id/numb_of_recipe"
-            android:layout_alignBottom="@+id/numb_of_recipe"
-            android:layout_alignEnd="@+id/how_to_cook"
-            android:layout_marginEnd="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:onClick="countDE"
-            android:backgroundTint="@color/colorAccent"
-            android:clickable="true"
-            android:text="@string/plus_button"
-            android:textSize="14sp"
-            tools:text="+" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/detailed_recipe_detail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ingredients_required"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="4dp"
+                android:layout_marginEnd="8dp"
+                android:paddingLeft="16dp"
+                android:textColor="@color/colorForText"
+                android:textSize="14sp" />
 
-        <Button
-            android:id="@+id/minus_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignBaseline="@+id/numb_of_recipe"
-            android:layout_alignBottom="@+id/numb_of_recipe"
-            android:layout_marginEnd="22dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_toStartOf="@+id/plus_button"
-            android:backgroundTint="@color/colorAccent"
-            android:clickable="true"
-            android:onClick="countIN"
-            android:text="@string/minus_button"
-            android:textSize="14sp"
-            tools:text="-" />
+            <Button
+                android:id="@+id/plus_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignBaseline="@+id/numb_of_recipe"
+                android:layout_alignBottom="@+id/numb_of_recipe"
+                android:layout_alignEnd="@+id/how_to_cook"
+                android:layout_marginEnd="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:onClick="countDE"
+                android:backgroundTint="@color/colorAccent"
+                android:clickable="true"
+                android:text="@string/plus_button"
+                android:textSize="14sp"
+                tools:text="+" />
 
-        <TextView
-            android:id="@+id/portion_quantity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/numb_of_recipe"
-            android:layout_alignBottom="@+id/numb_of_recipe"
-            android:layout_alignStart="@+id/minus_button"
-            android:layout_marginStart="42dp"
-            android:layout_toStartOf="@+id/plus_button"
-            android:text="0"
-            android:textAlignment="center" />
+            <Button
+                android:id="@+id/minus_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignBaseline="@+id/numb_of_recipe"
+                android:layout_alignBottom="@+id/numb_of_recipe"
+                android:layout_marginEnd="22dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_toStartOf="@+id/plus_button"
+                android:backgroundTint="@color/colorAccent"
+                android:clickable="true"
+                android:onClick="countIN"
+                android:text="@string/minus_button"
+                android:textSize="14sp"
+                tools:text="-" />
 
-    </RelativeLayout>
-</ScrollView>
+            <TextView
+                android:id="@+id/portion_quantity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/numb_of_recipe"
+                android:layout_alignBottom="@+id/numb_of_recipe"
+                android:layout_alignStart="@+id/minus_button"
+                android:layout_marginStart="42dp"
+                android:layout_toStartOf="@+id/plus_button"
+                android:text="0"
+                android:textAlignment="center" />
+
+        </RelativeLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
+</android.support.design.widget.CoordinatorLayout>
