--- a/app/src/main/res/layout/favorite_recipes_fragment.xml
+++ b/app/src/main/res/layout/favorite_recipes_fragment.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:theme="?attr/actionBarTheme"
+        android:minHeight="?attr/actionBarSize"
+        android:id="@+id/toolbar" />
 
     <GridView
         android:id="@+id/favorite_view"
@@ -16,4 +24,4 @@
         android:stretchMode="columnWidth"
         android:verticalSpacing="8dp" />
 
-</RelativeLayout>
+</LinearLayout>
